kubernetes/apps/messaging/rabbitmq/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: messaging
  labels:
    app: rabbitmq
    team: platform
    environment: lab
spec:
  serviceName: rabbitmq-headless
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        team: platform
        environment: lab
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: rabbitmq
          image: docker.io/library/rabbitmq:3.13-management-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: amqp
              containerPort: 5672
            - name: http-management
              containerPort: 15672
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - rabbitmq-diagnostics -q ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 18
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - rabbitmq-diagnostics -q check_running && rabbitmq-diagnostics -q check_local_alarms
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 15
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - rabbitmq-diagnostics -q ping
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 6
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - sleep 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
        labels:
          app: rabbitmq
          team: platform
          environment: lab
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-client
        resources:
          requests:
            storage: 2Gi
